markersを設定する必要が出てきたのでコメント追加

--- a/pytest-parametrized/pytest.ini
+++ b/pytest-parametrized/pytest.ini
@@ -1,1 +1,5 @@
-# 設定事項は特にないが、作成しない場合warningが出るので作成
+# markersを設定しないと、markersを設定した場合is this a typo? とWarningが出る
+# https://docs.pytest.org/en/stable/how-to/mark.html
+[pytest]
+markers =
+    basic: basic test
